--- a/index.html
+++ b/index.html
@@ -183,19 +183,19 @@
 
       <!-- Content area with buttons -->
       <div class="content relative w-full h-full">
-        <a href="./details.html?name=Bathymodiolus Mussels"><button class="btn absolute bottom-20 left-60" data-message="Bathymodiolus Mussels"><img class="w-28 h-28"
+        <a href="https://campuspixels.in/details.html?name=Bathymodiolus Mussels"><button class="btn absolute bottom-20 left-60" data-message="Bathymodiolus Mussels"><img class="w-28 h-28"
               src="./public/images/Bathymodiolus Mussels.png" alt="Bathymodiolus Mussels"></button></a>
-        <a href="./details.html?name=Polychaete Worms"><button class="btn absolute bottom-48 left-2/3" data-message="Polychaete Worms"><img class="w-24 h-24"
+        <a href="https://campuspixels.in/details.html?name=Polychaete Worms"><button class="btn absolute bottom-48 left-2/3" data-message="Polychaete Worms"><img class="w-24 h-24"
             src="./public/images/Polychaete Worms.png" alt="Polychaete Worms"></button></a>
-        <a href="./details.html?name=Siboglinid Tube Worms"><button class="btn absolute bottom-5 left-[50%]" data-message="Siboglinid Tube Worms"><img class="w-36 h-36"
+        <a href="https://campuspixels.in/details.html?name=Siboglinid Tube Worms"><button class="btn absolute bottom-5 left-[50%]" data-message="Siboglinid Tube Worms"><img class="w-36 h-36"
             src="./public/images/Siboglinid Tube Worms.png" alt="Siboglinid Tube Worms"></button></a>
-        <a href="./details.html?name=Amphipods"><button class="btn absolute bottom-80 left-[32%]" data-message="Amphipods"><img class="w-36 h-36"
+        <a href="https://campuspixels.in/details.html?name=Amphipods"><button class="btn absolute bottom-80 left-[32%]" data-message="Amphipods"><img class="w-36 h-36"
             src="./public/images/Amphipods.png" alt="Amphipods"></button></a>
-        <a href="./details.html?name=Vent Snails"><button class="btn absolute bottom-4 right-[18%]" data-message="Vent Snails"><img class="w-36 h-36"
+        <a href="https://campuspixels.in/details.html?name=Vent Snails"><button class="btn absolute bottom-4 right-[18%]" data-message="Vent Snails"><img class="w-36 h-36"
             src="./public/images/Vent Snails.png" alt="Vent Snails"></button></a>
-        <a href="./details.html?name=Vestimentiferan Tube Worms"><button class="btn absolute top-36 left-10" data-message="Vestimentiferan Tube Worms"><img class="w-10 h-10"
+        <a href="https://campuspixels.in/details.html?name=Vestimentiferan Tube Worms"><button class="btn absolute top-36 left-10" data-message="Vestimentiferan Tube Worms"><img class="w-10 h-10"
             src="./public/images/Vestimentiferan Tube Worms.png" alt="Vestimentiferan Tube Worms"></button></a>
-        <a href="./details.html?name=Deep-Sea Bivalves"><button class="btn absolute bottom-4 right-[58%]" data-message="Deep-Sea Bivalves"><img class="w-28 h-28"
+        <a href="https://campuspixels.in/details.html?name=Deep-Sea Bivalves"><button class="btn absolute bottom-4 right-[58%]" data-message="Deep-Sea Bivalves"><img class="w-28 h-28"
             src="./public/images/Deep-Sea Bivalves.png" alt="Deep-Sea Bivalves"></button></a>
       </div>
     </div>
